--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title>Bootstrap</title>
+		<title>Loja de telemoveis</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -22,43 +22,51 @@
     			<div class="bg-dark p-4">
      				 <h5 class="text-white h4">Design Multimédia</h5>
       				<span class="text-muted">Menu dinâmico</span>
-      				<a href="#">Início</a>
+      				<div>
+      					<a href="index.html" class="btn btn-info">Início</a>
+      					<a href="pg/preco.html" title="Preço das Férias" class="btn btn-info">Telémoveis</a>
+    				</div>
     			</div>
   			</div>
 		</div>
 			
 
 		<!-- Slider de imagem -->
-
-		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-		  <ol class="carousel-indicators">
-		    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-		    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-		    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-		  </ol>
-		  <div class="carousel-inner">
-		    <div class="carousel-item active">
-		      <img src="img/paisagem.jpg" class="d-block w-100" alt="...">
-		    </div>
-		    <div class="carousel-item">
-		      <img src="img/paisagem.jpg" class="d-block w-100" alt="...">
-		    </div>
-		    <div class="carousel-item">
-		      <img src="img/paisagem.jpg" class="d-block w-100" alt="...">
-		    </div>
-		  </div>
-		  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Previous</span>
-		  </a>
-		  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Next</span>
-		  </a>
+		<div class="container col-md-7">
+			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+			  <ol class="carousel-indicators">
+			    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+			    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+			    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+			  </ol>
+			  <div class="carousel-inner">
+			    <div class="carousel-item active">
+			      <img src="img/iphonexs.jpg" class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-none d-md-block">
+        </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img src="img/samsunga30s.jpg" class="d-block w-100" alt="...">
+			    </div>
+			    <div class="carousel-item">
+			      <img src="img/samsungnote10.jpg" class="d-block w-100" alt="...">
+			    </div>
+			  </div>
+			  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Previous</span>
+			  </a>
+			  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Next</span>
+			  </a>
+			</div>
 		</div>
 
 		<!-- Rodapé -->
-
+		<footer class="card-footer text-muted bg-dark">
+			22329 - Fábio Monteiro
+		</footer>
 
 
 		<!--Scripts Bootstrap e JQuery-->
